# cb-text-analytics

./: .gitignore  README.md  analysis.py  fomc_analysis.ipynb  pyproject.toml
nz-central-bank/: README.md
nz-central-bank/ocr/: 2012-04-26.txt
nz-central-bank/official-cash-rate/: 2012-01-26.txt  2012-03-08.txt  2012-06-14-txt
usa-central-bank/fomc-statements/: 2023-02-01.txt  2023-03-22.txt  2023-05-03.txt  2023-06-14.txt  2024-01-31.txt  2024-03-20.txt  2024-05-01.txt  2024-06-12.txt  2024-07-31.txt  2024-09-18.txt  2024-11-07.txt  2024-12-18.txt  2025-01-29.txt  2025-03-19.txt  2025-05-07.txt  2025-06-18.txt  2025-07-30.txt  2025-09-17.txt  2025-10-29.txt
